# autolabel-ml-platform-demo

./: .gitignore  LICENSE  README.md
apps/api/: pyproject.toml
apps/api/packaging/: build.py  defect_vision_research.spec  verify_pyz.py
apps/api/packaging/assets/: version_info.txt
apps/api/scripts/: build_exe.ps1  eval_test_set.py  run_baseline_p0.py  run_p0_then_eval.ps1
apps/api/src/app/: __init__.py  desktop_entry.py  main.py
apps/api/src/app/api/: routes.py
apps/api/src/app/core/: __init__.py  atomic_io.py  config.py
apps/api/src/app/domain/: defect_autolabel_models.py  models.py  research_models.py
apps/api/src/app/plugins/: __init__.py  demo_plugins.py  interfaces.py
apps/api/src/app/services/: accuracy_audit.py  autolabel.py  benchmark.py  commercialization.py  data_quality_audit.py  defect_anchor_selector.py  defect_autolabel_runner.py  defect_dataset_ingest.py  defect_export.py  defect_inference.py  defect_propagation.py  defect_quality.py  defect_review.py  pipeline.py  (+20 more)
apps/api/tests/: test_artifact_preview.py  test_autolabel.py  test_benchmark.py  test_commercialization.py  test_daf.py  test_defect_autolabel_v2.py  test_demo_api.py  test_desktop_entry.py  test_desktop_runtime.py  test_discovery_stage.py  test_dynamic_capture.py  test_evaluation.py  test_forensic_wdr.py  test_fusion.py  test_health.py  test_live_monitor.py  test_operator_guide.py  test_packaging.py  test_registration.py  test_reporting.py  test_research_v1.py  test_retinex_msrcr.py  test_segmentation_bootstrap.py  test_target_lux.py  test_training.py  test_workspace_runner.py
(+19 files in other folders)
